hard-gists/7669374/run.log
=== Docker Run Log for 7669374 ===
Started at: Mi 29. Okt 17:14:22 CET 2025

[2025-10-29 17:14:22] START: Running container for 7669374
[2025-10-29 17:14:22] SUCCESS: Container 49b6c03ebed978798d2ee390fed7ea7cfa42fa6180f6a0b6abc0ba2f82244642 started for 7669374
=== Container logs for 7669374 ===
  File "/snippet.py", line 15
    print '%s%s' % (' ' * indent, UIView.description(view))
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 7669374 ===
[2025-10-29 17:14:24] INFO: Container 49b6c03ebed978798d2ee390fed7ea7cfa42fa6180f6a0b6abc0ba2f82244642 has stopped
